syntax = "proto3";

package headers.options.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/headers";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;
import "github.com/solo-io/solo-kit/api/external/envoy/api/v2/core/base.proto";

import "google/protobuf/wrappers.proto";


// This plugin provides configuration options to append and remove headers from
// requests and responses
// HeaderManipulation can be specified on routes, virtual hosts, or weighted destinations
message HeaderManipulation {
    // Specifies a list of HTTP headers that should be added to each request
    // handled by this route or virtual host. For more information, including
    // details on header value syntax, see the
    // [Envoy documentation](https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_conn_man/headers.html#) .
    repeated .solo.io.envoy.api.v2.core.HeaderValueOption request_headers_to_add = 1;


    // Specifies a list of HTTP headers that should be removed from each request
    // handled by this route or virtual host.
    repeated string request_headers_to_remove = 2;


    // Specifies a list of HTTP headers that should be added to each response
    // handled by this route or host. For more information, including
    // details on header value syntax, see the
    // [Envoy documentation](https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_conn_man/headers.html# .
    repeated HeaderValueOption response_headers_to_add = 3;

    // Specifies a list of HTTP headers that should be removed from each response
    // handled by this route or virtual host.
    repeated string response_headers_to_remove = 4;
}

// EarlyHeaderManipulation can be specified on Gateways to manipulate headers before significant processing
// has happened and routing decisions are made.
// Early header manipulation allows adding/removing headers that affect request processing
// and can be used to implement override headers.
// Note: The adding of headers happens before the removal of headers.
message EarlyHeaderManipulation {
    // Specifies a list of HTTP headers that should be added to each request
    // handled by this gateway. For more information, including
    // details on header value syntax, see the
    // [Envoy documentation](https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_conn_man/headers.html#) .
    repeated .solo.io.envoy.api.v2.core.HeaderValueOption headers_to_add = 1;


    // Specifies a list of HTTP headers that should be removed from each request
    // handled by this gateway.
    repeated string headers_to_remove = 2;
}

// Header name/value pair plus option to control append behavior.
message HeaderValueOption {
    // Header name/value pair that this option applies to.
    HeaderValue header = 1;

    // Specifies if the value should be appended or overwrite an existing header. Defaults to true.
    // If set to true, this maps to Envoy's `append_value: APPEND_IF_EXISTS_OR_ADD`, where the value gets be appended the header's value(s) if exists, or created if it does not.
    // If set to false, this maps to Envoy's `append_value: OVERWRITE_IF_EXISTS_OR_ADD`, where the header's value will be overwritten if it exists, or created if it does not.
    google.protobuf.BoolValue append = 2;
}


// Header name/value pair.
message HeaderValue {
    // Header name.
    string key = 1;

    // Header value.
    string value = 2;
}
